@@ -137,6 +137,15 @@ static ATErrorCode CMSErrorCodes[] = {
 	{0xD3, "Memory Capacity Exceede"},
 	{0xD4, "SIM Application Toolkit Busy"},
 	{0xFF, "Unspecified error cause"},
+	/* From Siemens documentation, does not have to be valid for all vendors */
+	{256, "Operation temporary not allowed"},
+	{257, "call barred"},
+	{258, "phone busy"},
+	{259, "user abort"},
+	{260, "invalid dial string"},
+	{261, "ss not executed"},
+	{262, "SIM blocked"},
+	{263, "Invalid Block"},
 	/* 300...511 from GSM 07.05 subclause 3.2.5 */
 	{300,  "ME failure"},
 	{301,  "SMS service of ME reserved"},
@@ -163,6 +172,50 @@ static ATErrorCode CMSErrorCodes[] = {
 	{500,  "unknown error"},
 	/* > 512 are manufacturer specific according to GSM 07.05 subclause 3.2.5 */
 	{516,  "Motorola - too high location?"},
+	/* Siemens */
+	{512, "User abort"},
+	{513, "unable to store"},
+	{514, "invalid status"},
+	{515, "invalid character in address string"},
+	{516, "invalid length"},
+	{517, "invalid character in pdu"},
+	{519, "invalid length or character"},
+	{520, "invalid character in text"},
+	{521, "timer expired"},
+	{522, "Operation temporary not allowed"},
+	{532, "SIM not ready"},
+	{534, "Cell Broadcast error unknown"},
+	{535, "PS busy"},
+	{538, "invalid parameter"},
+	{549, "incorrect PDU length"},
+	{550, "invalid message type indication (MTI)"},
+	{551, "invalid (non-hex) chars in address"},
+	{553, "incorrect PDU length (UDL)"},
+	{554, "incorrect SCA length"},
+	{578, "GPRS - unspecified activation rejection"},
+	{588, "GPRS - feature not supported"},
+	{594, "GPRS - invalid address length"},
+	{595, "GPRS - invalid character in address string"},
+	{596, "GPRS - invalid cid value"},
+	{607, "GPRS - missing or unknown APN"},
+	{615, "network failure"},
+	{616, "network is down"},
+	{625, "GPRS - pdp type not supported"},
+	{630, "GPRS - profile (cid) not defined"},
+	{632, "GPRS - QOS not accepted"},
+	{633, "GPRS - QOS validation fail"},
+	{639, "service type not yet available"},
+	{640, "operation of service temporary not allowed"},
+	{643, "GPRS - unknown PDP address or type"},
+	{644, "GPRS - unknown PDP context"},
+	{646, "GPRS - QOS invalid parameter"},
+	{764, "missing input value"},
+	{765, "invalid input value"},
+	{767, "operation failed"},
+	{769, "unable to get control of required module"},
+	{770, "SIM invalid - network reject"},
+	{771, "call setup in progress"},
+	{772, "SIM powered down"},
 	{-1,   ""}
 };
 
