@@ -19,6 +19,7 @@ ChangeLog
 
 [-] * Fixed getting of network name from saved message.
 [-] * Fixed encoding of text to some encodings in AT engine.
+[-] * Detect more Siemens CME error codes.
     
 20090116 - 1.22.91
 
